add unittest framework

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,20 +9,31 @@
 cmake_minimum_required ( VERSION 3.9.2 )
 
 include("cmake/HunterGate.cmake")
-
 HunterGate(
-    URL "https://github.com/ruslo/hunter/archive/v0.23.17.tar.gz"
-    SHA1 "a438452aa14fc5cbd58f080eee45f07351b27d2f"
+    URL "https://github.com/ruslo/hunter/archive/v0.23.22.tar.gz"
+    SHA1 "dffc6269efd60e79ea2e28a927cce94d3e4a6e03"
 )
+
+include("cmake/CompilerSettings.cmake")
 
 project (gpm)
 
-set(BOOST_MIN_VERSION "1.68.0")
+option(GPM_BUILD_TESTS "Enable to build the tests" ON)
+option(GPM_CXX_COLORED_OUTPUT "Always produce ANSI-colored output (GNU/Clang only)." OFF)
+
+
 hunter_add_package(Boost COMPONENTS system program_options)
+set(BOOST_MIN_VERSION "1.68.0")
 find_package(Boost ${BOOST_MIN_VERSION} REQUIRED COMPONENTS system program_options)
+
+if (${GPM_BUILD_TESTS})
+    hunter_add_package(Catch)
+    find_package(Catch2 CONFIG REQUIRED)
+    enable_testing()
+endif()
 
 include_directories(SYSTEM ${Boost_INCLUDE_DIRS})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 
 add_subdirectory(examples)
-
+add_subdirectory(tests)
