--- a/examples/ant/CMakeLists.txt
+++ b/examples/ant/CMakeLists.txt
@@ -4,3 +4,5 @@ set_target_properties(artificial_ant PROPERTIES
             CXX_EXTENSIONS OFF
 )
 target_compile_options(artificial_ant PRIVATE -Wall -Wextra -pedantic -Werror)
+
+add_subdirectory ( tests )
