--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ addons:
 script:
   - CXX=/usr/bin/g++-7 CC=/usr/bin/gcc-7 cmake . 
   - cmake --build . -- -j2 
-  - ctest -j2
+  - ctest --output-on-failure -VV
