--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,11 @@ addons:
   apt:
     sources:
       - ubuntu-toolchain-r-test
+      - llvm-toolchain-precise-5.0
     packages:
-      - g++-7
+      - clang-5.0
 
 script:
-  - CXX=/usr/bin/g++-7 CC=/usr/bin/gcc-7 cmake . 
+  - CXX=clang++-5.0 CC=clang-5.0 cmake . 
   - cmake --build . -- -j2 
   - ctest --output-on-failure -VV
