--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,11 @@ addons:
   apt:
     sources:
       - ubuntu-toolchain-r-test
-      - llvm-toolchain-precise-5.0
+      - sourceline: 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-5.0 main'
+        key_url: 'https://apt.llvm.org/llvm-snapshot.gpg.key'
     packages:
       - clang-5.0
+      - llvm-5.0-dev
 
 script:
   - CXX=clang++-5.0 CC=clang-5.0 cmake . 
