--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,9 @@ hunter_add_package(Boost COMPONENTS system program_options)
 set(BOOST_MIN_VERSION "1.68.0")
 find_package(Boost ${BOOST_MIN_VERSION} REQUIRED COMPONENTS system program_options)
 
+hunter_add_package(fmt)
+find_package(fmt CONFIG REQUIRED)
+
 if (${GPM_BUILD_TESTS})
     hunter_add_package(Catch)
     find_package(Catch2 CONFIG REQUIRED)
