--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,7 @@ option(GPM_CXX_COLORED_OUTPUT "Always produce ANSI-colored output (GNU/Clang onl
 
 include("cmake/CompilerSettings.cmake")
 
-hunter_add_package(Boost COMPONENTS system program_options)
+hunter_add_package(Boost)
 set(BOOST_MIN_VERSION "1.68.0")
 find_package(Boost ${BOOST_MIN_VERSION} REQUIRED)
 
