--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,6 @@ matrix:
           packages: [ "clang-6.0", "llvm-6.0-dev", "g++-8", "ninja-build"]
 
 script:
-  - cmake . -GNinja
+  - CXX=clang++-6.0 CC=clang-6.0 cmake . -GNinja
   - cmake --build . -- -j2 
   - ctest --output-on-failure -VV
