--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ matrix:
           packages: [ "clang-6.0", "llvm-6.0-dev", "g++-8", "ninja-build"]
 
 script:
-  - CXX=clang++-6.0 CC=clang-6.0 cmake . -GNinja
+  - echo "Foobar ${CXX}"
+  - cmake . -GNinja -DCMAKE_CXX_COMPILER=clang++-6.0 -DCMAKE_C_COMPILER=clang-6.0
   - cmake --build . -- -j2 
   - ctest --output-on-failure -VV
