--- a/.travis.yml
+++ b/.travis.yml
@@ -25,16 +25,19 @@ matrix:
       addons: *default_addons
     - env: CXXCOMPILER=clang++-6.0 CCOMPILER=clang-6.0 CMAKE_CXX_FLAGS="-fsanitize=address -fno-omit-frame-pointer" CMAKE_EXE_LINKER_FLAGS="-fsanitize=address"
       addons: *default_addons
-     
+    - env: CXXCOMPILER=clang++-6.0 CCOMPILER=clang-6.0 CMAKE_CXX_FLAGS="-fsanitize=memory -fno-omit-frame-pointer" CMAKE_EXE_LINKER_FLAGS="-fsanitize=memory"
+      addons: *default_addons
+    - env: CXXCOMPILER=clang++-6.0 CCOMPILER=clang-6.0 CMAKE_CXX_FLAGS="-fsanitize=undefined -fno-omit-frame-pointer" CMAKE_EXE_LINKER_FLAGS="-fsanitize=undefined"
+      addons: *default_addons
 
 script:
   - |
     cmake . -GNinja \
-      -DCMAKE_CXX_COMPILER=${CXXCOMPILER} \
-      -DCMAKE_C_COMPILER=${CCCOMPILER} \
+      -DCMAKE_CXX_COMPILER="${CXXCOMPILER}" \
+      -DCMAKE_C_COMPILER="${CCCOMPILER}" \
       -DCMAKE_BUILD_TYPE=Debug \
-      -DCMAKE_CXX_FLAGS=${CMAKE_CXX_FLAGS} \
-      -DCMAKE_EXE_LINKER_FLAGS=${CMAKE_EXE_LINKER_FLAGS} 
+      -DCMAKE_CXX_FLAGS="${CMAKE_CXX_FLAGS}" \
+      -DCMAKE_EXE_LINKER_FLAGS="${CMAKE_EXE_LINKER_FLAGS}" 
   - cmake --build . -- -j2 
   - ctest --output-on-failure -VV        
 
