--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,8 @@ matrix:
     #  addons: *default_addons
     - env: CLANG_VERS="6.0" CXXCOMPILER=clang++-6.0 CCOMPILER=clang-6.0 CMAKE_CXX_FLAGS="-fsanitize=undefined -fno-omit-frame-pointer" CMAKE_EXE_LINKER_FLAGS="-fsanitize=undefined"
       addons: *default_addons
+    - env: CLANG_VERS="6.0" CXXCOMPILER=g++-8 CCOMPILER=gcc-8 CMAKE_CXX_FLAGS="-fsanitize=address -fno-omit-frame-pointer" CMAKE_EXE_LINKER_FLAGS="-fsanitize=address"
+      addons: *default_addons
 
 script:
   - export PATH=/usr/lib/llvm-${CLANG_VERS}/bin/:${PATH}
