improved on meta programming ant example

--- a/examples/ant/CMakeLists.txt
+++ b/examples/ant/CMakeLists.txt
@@ -1,11 +1,11 @@
-add_executable(artificial_ant artificial_ant_main.cpp) 
-set_target_properties(artificial_ant PROPERTIES
+add_executable(ant_simulation_generate ant_simulation_generate.cpp) 
+set_target_properties(artificial_ant_generate PROPERTIES
             CXX_STANDARD 17
             CXX_EXTENSIONS OFF
 )
-target_compile_options(artificial_ant PRIVATE -Wall -Wextra -pedantic -Werror)
+target_compile_options(ant_simulation_generate PRIVATE -Wall -Wextra -pedantic -Werror)
 
-target_link_libraries(artificial_ant fmt::fmt)
+target_link_libraries(ant_simulation_generate fmt::fmt)
 
 
 
@@ -17,6 +17,17 @@ set_target_properties(static_vs_dynamic_ant PROPERTIES
 target_compile_options(static_vs_dynamic_ant PRIVATE -Wall -Wextra -pedantic -Werror)
 
 target_link_libraries(static_vs_dynamic_ant fmt::fmt)
+
+add_executable(ant_simulation_benchmark ant_simulation_benchmark.cpp) 
+set_target_properties(ant_simulation_benchmark PROPERTIES
+           CXX_STANDARD 17
+           CXX_EXTENSIONS OFF
+)
+target_compile_options(ant_simulation_benchmark PRIVATE -Wall -Wextra -pedantic -Werror)
+
+target_link_libraries(ant_simulation_benchmark fmt::fmt)
+
+
 
 
 add_subdirectory(tests)
