adding formating step for generated files

--- a/examples/ant/CMakeLists.txt
+++ b/examples/ant/CMakeLists.txt
@@ -1,3 +1,11 @@
+#
+#  Copyright 2018 Gerard Choinka
+#  
+#  Distributed under the Boost Software License, Version 1.0.
+#  (See accompanying file LICENSE_1_0.txt or
+#  copy at http://www.boost.org/LICENSE_1_0.txt)
+#
+
 SET(targetName ant_simulation_generate)
 add_executable(${targetName} ant_simulation_generate.cpp) 
 set_target_properties(ant_simulation_generate PROPERTIES
@@ -31,8 +39,18 @@ target_link_libraries(${targetName} fmt::fmt)
 
 
 
+option(GPM_FORMAT_GENERATED_FILES "Should files witch are generated be formated" OFF)
+
+if(CLANG_FORMAT AND ${GPM_FORMAT_GENERATED_FILES})
+    set(FORMAT_STEP "${CLANG_FORMAT}" -i -style=Google "${GeneratedIncludesDir}/ant_simulation_benchmark_generated_functions.cpp")
+else()
+    set(FORMAT_STEP "${CMAKE_COMMAND}" -E echo "skiped formating step")
+endif()
+
+
 add_custom_target(make_static_vs_dynamic 
     COMMAND ant_simulation_generate > "${GeneratedIncludesDir}/ant_simulation_benchmark_generated_functions.cpp"
+    COMMAND ${FORMAT_STEP}
     COMMAND ${CMAKE_COMMAND} -E touch_nocreate "${CMAKE_CURRENT_SOURCE_DIR}/ant_simulation_benchmark.cpp"
     COMMAND ${CMAKE_COMMAND} --build ${CMAKE_BINARY_DIR} --target ant_simulation_benchmark
     DEPENDS ant_simulation_generate
