--- a/examples/ant/CMakeLists.txt
+++ b/examples/ant/CMakeLists.txt
@@ -7,7 +7,7 @@
 #
 
 SET(targetName ant_simulation_generate)
-add_executable(${targetName} ant_simulation_generate.cpp) 
+add_executable(${targetName} generate_main.cpp) 
 set_target_properties(ant_simulation_generate PROPERTIES
             CXX_STANDARD 17
             CXX_EXTENSIONS OFF
@@ -17,19 +17,8 @@ target_link_libraries(${targetName} fmt::fmt)
 
 
 
-SET(targetName static_vs_dynamic_ant)
-add_executable(${targetName} static_vs_dynamic_ant.cpp) 
-set_target_properties(${targetName} PROPERTIES
-           CXX_STANDARD 17
-           CXX_EXTENSIONS OFF
-)
-target_compile_options(${targetName} PRIVATE -Wall -Wextra -pedantic -Werror)
-target_link_libraries(${targetName} fmt::fmt)
-
-
-
 SET(targetName ant_simulation_benchmark)
-add_executable(${targetName} ant_simulation_benchmark.cpp) 
+add_executable(${targetName} benchmark_main.cpp) 
 set_target_properties(${targetName} PROPERTIES
            CXX_STANDARD 17
            CXX_EXTENSIONS OFF
@@ -39,7 +28,7 @@ target_link_libraries(${targetName} fmt::fmt)
 
 
 
-option(GPM_FORMAT_GENERATED_FILES "Should files witch are generated be formated" OFF)
+option(GPM_FORMAT_GENERATED_FILES "Should the files which were generated in ${GeneratedIncludesDir} be formated?(only usefull if someone wants to read them)." OFF)
 
 if(CLANG_FORMAT AND ${GPM_FORMAT_GENERATED_FILES})
     set(FORMAT_STEP "${CLANG_FORMAT}" -i -style=Google "${GeneratedIncludesDir}/ant_simulation_benchmark_generated_functions.cpp")
@@ -48,10 +37,10 @@ else()
 endif()
 
 
-add_custom_target(make_static_vs_dynamic 
+add_custom_target(make_benchmark 
     COMMAND ant_simulation_generate > "${GeneratedIncludesDir}/ant_simulation_benchmark_generated_functions.cpp"
     COMMAND ${FORMAT_STEP}
-    COMMAND ${CMAKE_COMMAND} -E touch_nocreate "${CMAKE_CURRENT_SOURCE_DIR}/ant_simulation_benchmark.cpp"
+    COMMAND ${CMAKE_COMMAND} -E touch_nocreate "${CMAKE_CURRENT_SOURCE_DIR}/benchmark_main.cpp"
     COMMAND ${CMAKE_COMMAND} --build ${CMAKE_BINARY_DIR} --target ant_simulation_benchmark
     DEPENDS ant_simulation_generate
 )
