starting using google benchmark for the ant benchmark

--- a/examples/ant/CMakeLists.txt
+++ b/examples/ant/CMakeLists.txt
@@ -24,7 +24,7 @@ set_target_properties(${targetName} PROPERTIES
            CXX_EXTENSIONS OFF
 )
 target_compile_options(${targetName} PRIVATE -Wall -Wextra -pedantic -Werror)
-target_link_libraries(${targetName} fmt::fmt)
+target_link_libraries(${targetName} fmt::fmt benchmark::benchmark)
 
 
 
