--- a/sketch/CMakeLists.txt
+++ b/sketch/CMakeLists.txt
@@ -6,6 +6,6 @@ set_target_properties(mapfmt PROPERTIES
 )
 target_compile_options(mapfmt PRIVATE -Wall -Wextra -pedantic -Werror)
 
-target_link_libraries(mapfmt fmt::fmt)
+target_link_libraries(mapfmt fmt::fmt Boost::boost)
 
 add_subdirectory(datastore)
