--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,6 +7,9 @@ environment:
       FLAGS: "/permissive- /std:c++latest /utf-8"
       GENERATOR: Visual Studio 15 2017
 
+cache:
+  - C:\.hunter
+  
 init:
   - cmake --version
   - msbuild /version
