--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,9 @@ os: linux
 dist: trusty
 sudo: false
 
+cache:
+  apt: true
+
 matrix:
   include:
     - env: CLANG_VERS="6.0" CXXCOMPILER="clang++-6.0" CCOMPILER="clang-6.0"
