--- a/appveyor.yml
+++ b/appveyor.yml
@@ -22,4 +22,5 @@ build_script:
   - cmake --build .
 
 test_script:
-  - ctest  --output-on-failure -VV -C Debug .
+  - cmake --build . --target run_tree_benchmark
+  - ctest --output-on-failure -VV -C Debug .
