--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,9 @@ if(${GPM_BUILD_BENCHMARK})
     find_package(benchmark CONFIG REQUIRED)
 endif()
 
+hunter_add_package(cxxopts)
+find_package(cxxopts CONFIG REQUIRED)
+
 find_program(CLANG_FORMAT NAMES "clang-format" "clang-format-9.0" "clang-format-8.0" "clang-format-7.0" "clang-format-6.0" "clang-format-5.0" "clang-format-4.0" "clang-format-3.0" DOC "Path to clang-format executable")
 
 if(NOT CLANG_FORMAT)
