--- a/examples/ant/CMakeLists.txt
+++ b/examples/ant/CMakeLists.txt
@@ -58,15 +58,15 @@ endif()
 
 
 add_custom_target(make_tree_benchmark 
-    COMMAND $<TARGET_FILE:generate_tree_for_benchmark> -a "${CMAKE_CURRENT_SOURCE_DIR}/data/randomAnt.txt" -o "${GeneratedIncludesDir}/ant_simulation_benchmark_generated_functions.cpp"
+    COMMAND "$<TARGET_FILE:generate_tree_for_benchmark>" -a "${CMAKE_CURRENT_SOURCE_DIR}/data/randomAnt.txt" -o "${GeneratedIncludesDir}/ant_simulation_benchmark_generated_functions.cpp"
     COMMAND ${FORMAT_STEP}
     COMMAND ${CMAKE_COMMAND} -E touch_nocreate "${CMAKE_CURRENT_SOURCE_DIR}/tree_benchmark_main.cpp"
-    COMMAND ${CMAKE_COMMAND} --build ${CMAKE_BINARY_DIR} --target tree_benchmark
+    COMMAND ${CMAKE_COMMAND} --build "${CMAKE_BINARY_DIR}" --target tree_benchmark
     DEPENDS generate_tree_for_benchmark
 )
 
 add_custom_target(run_tree_benchmark 
-    COMMAND $<TARGET_FILE:tree_benchmark> --benchmark_out_format=json --benchmark_out=${CMAKE_BINARY_DIR}/tree_benchmark.json -b "${CMAKE_CURRENT_SOURCE_DIR}/data/santa_fe_board.txt"
+    COMMAND "$<TARGET_FILE:tree_benchmark>" --benchmark_out_format=json --benchmark_out="${CMAKE_BINARY_DIR}/tree_benchmark.json" -b "${CMAKE_CURRENT_SOURCE_DIR}/data/santa_fe_board.txt"
     DEPENDS make_tree_benchmark
 )
 
