adding hana tuple tree structure sketch

--- a/sketch/CMakeLists.txt
+++ b/sketch/CMakeLists.txt
@@ -8,4 +8,14 @@ target_compile_options(mapfmt PRIVATE -Wall -Wextra -pedantic -Werror)
 
 target_link_libraries(mapfmt fmt::fmt Boost::boost)
 
+add_executable(hanatupletree hanatupletree.cpp)
+set_target_properties(hanatupletree PROPERTIES
+            CXX_STANDARD 17
+            CXX_EXTENSIONS OFF
+)
+target_compile_options(hanatupletree PRIVATE -Wall -Wextra -pedantic -Werror)
+
+target_link_libraries(hanatupletree fmt::fmt Boost::boost)
+
+
 add_subdirectory(datastore)
